deploy/w3f/app/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: ai-cns-app
  name: ai-cns-app
  namespace: ai-cns
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: ai-cns-app
  serviceName: ai-cns-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ai-cns-app
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: ai-cns
          image: 992382680272.dkr.ecr.eu-west-3.amazonaws.com/sandbox-dev-ai-cns:main-e61a6ff
          command: ["sh", "-c"]
          args: ["pnpm start --characters='lubAIn.character.json' & pnpm start:client"]
          ports:
            - containerPort: 3000
              protocol: TCP
            - containerPort: 5173
              protocol: TCP           
            - containerPort: 3069
              protocol: TCP
            - containerPort: 3070
              protocol: TCP
            - containerPort: 3071
              protocol: TCP           
          volumeMounts:
            - name: data
              mountPath: /app/agent/data
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 4
              memory: 2Gi
            requests:
              cpu: 2
              memory: 2Gi
          livenessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 5
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
