deploy/w3f/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/whitelist-x-forwarded-for: 'true'
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - open up'
  labels:
    app.kubernetes.io/name: ai-cns-app
  name: ai-cns-app
  namespace: ai-cns
spec:
  ingressClassName: nginx
  rules:
    - host: ai-cns-hackathon-eu-dev.sandbox.web3factory.consensys.net
      http:
        paths:
          - backend:
              service:
                name: ai-cns-app
                port:
                  number: 5173
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ai-cns-hackathon-eu-dev.sandbox.web3factory.consensys.net
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/whitelist-x-forwarded-for: 'true'
  labels:
    app.kubernetes.io/name: ai-cns-app
  name: ai-cns-app-back
  namespace: ai-cns
spec:
  ingressClassName: nginx
  rules:
    - host: ai-cnsback-hackathon-eu-dev.sandbox.web3factory.consensys.net
      http:
        paths:
          - backend:
              service:
                name: ai-cns-app
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ai-cnsback-hackathon-eu-dev.sandbox.web3factory.consensys.net
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/whitelist-x-forwarded-for: 'true'
  labels:
    app.kubernetes.io/name: ai-cns-app
  name: ai-cns-app-69
  namespace: ai-cns
spec:
  ingressClassName: nginx
  rules:
    - host: ai-cns3069-hackathon-eu-dev.sandbox.web3factory.consensys.net
      http:
        paths:
          - backend:
              service:
                name: ai-cns-app
                port:
                  number: 3069
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ai-cns3069-hackathon-eu-dev.sandbox.web3factory.consensys.net
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/whitelist-x-forwarded-for: 'true'
  labels:
    app.kubernetes.io/name: ai-cns-app
  name: ai-cns-app-70
  namespace: ai-cns
spec:
  ingressClassName: nginx
  rules:
    - host: ai-cns3070-hackathon-eu-dev.sandbox.web3factory.consensys.net
      http:
        paths:
          - backend:
              service:
                name: ai-cns-app
                port:
                  number: 3070
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ai-cns3070-hackathon-eu-dev.sandbox.web3factory.consensys.net
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/whitelist-x-forwarded-for: 'true'
  labels:
    app.kubernetes.io/name: ai-cns-app
  name: ai-cns-app-71
  namespace: ai-cns
spec:
  ingressClassName: nginx
  rules:
    - host: ai-cns3071-hackathon-eu-dev.sandbox.web3factory.consensys.net
      http:
        paths:
          - backend:
              service:
                name: ai-cns-app
                port:
                  number: 3071
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ai-cns3071-hackathon-eu-dev.sandbox.web3factory.consensys.net
